Middleware-namespace/ingress-middleware.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minwon-ingress-argocd
  namespace: middleware
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # HTTPS로의 강제 리다이렉션 방지
spec:
  rules:
  - host: argov2.hyuns.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
